syntax = "proto3";
package spacemesh.v1;
option go_package = "github.com/spacemeshos/api/release/go/spacemesh/v1";
import "types.proto";
import "google/rpc/status.proto";

message EchoRequest {
    SimpleString msg = 1;
}

message EchoResponse {
    SimpleString msg = 1;
}

message VersionResponse {
    SimpleString version_string = 1;
}

message BuildResponse {
    SimpleString build_string = 1;
}

message SyncStartRequest {}

message SyncStartResponse {
    google.rpc.Status status = 1;
}

message ShutdownRequest {}

message ShutdownResponse {
    google.rpc.Status status = 1;
}

// current node status
message NodeStatus {
    uint64 connected_peers = 1; // number of connected neighbors
    bool   is_synced = 2; // true when meshed is synced
    LayerNumber synced_layer = 3; // the last layer node has synced
    LayerNumber top_layer = 4; // top layer is the tip
    LayerNumber verified_layer = 5; // the last layer node has verified
}

message StatusRequest {}

message StatusResponse {
    NodeStatus status = 1;
}

message UpdatePoetServerRequest {
    string url = 1;
}

message UpdatePoetServerResponse {
    google.rpc.Status status = 1;
}

message StatusStreamRequest {}

message StatusStreamResponse {
    NodeStatus status = 1;
}

enum LogLevel {
    LOG_LEVEL_UNSPECIFIED = 0;
    LOG_LEVEL_DEBUG = 1;
    LOG_LEVEL_INFO = 2;
    LOG_LEVEL_WARN = 3;
    LOG_LEVEL_ERROR = 4;
    LOG_LEVEL_DPANIC = 5;
    LOG_LEVEL_PANIC = 6;
    LOG_LEVEL_FATAL = 7;
}

message NodeError {
    LogLevel level = 1;
    string module = 2;
    string msg = 3;
    string stack_trace = 4;
}

message ErrorStreamRequest {}

message ErrorStreamResponse {
    NodeError error = 1;
}
